# boxflow

./: .gitignore  LICENSE  README.md  pyproject.toml
boxflow/: __init__.py  __main__.py  app.py  cli.py  config.py
boxflow/api/: export_routes.py  routes.py  settings_api.py
boxflow/core/: __init__.py  exporters.py  models.py  service.py  storage.py
boxflow/providers/: __init__.py  base.py  clip.py  registry.py  yolo.py
boxflow/static/: index.html
boxflow/static/css/: style.css
boxflow/static/js/: app.js  bbox-editor.js  classifier.js  dashboard.js  settings.js
tests/: __init__.py  conftest.py  test_api.py  test_config.py  test_exporters.py  test_providers.py  test_service.py  test_storage.py
